--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <label for="formEventoStatus">Status:</label><br>
             <input id="formEventoStatus" name="status" type="text" disabled="true"><br>
             <label for="formEventoLocal">Local:</label><br>
-            <input id="formEventoLocal" name="Local" type="text" disabled="true"><br>
+            <input id="formEventoLocal" name="local" type="text" disabled="true"><br>
             <label for="formEventoDataInicio">Data de início:</label><br>
             <input id="formEventoDataInicio" name="dataInicio" type="datetime-local" disabled="true"><br>
             <label for="formEventoDataFim">Data de término:</label><br>
