incrementos em index.html e summit.js

--- a/index.html
+++ b/index.html
@@ -28,29 +28,32 @@
             <button class="btnAcao" formmethod="POST" style="display:none"></button>
             <br>
             <label for="formEventoNome">Nome do evento:</label><br>
-            <input id="formEventoNome" name="nome" type="text" disabled="true"><br>
+            <input id="formEventoNome" name="nome" type="text" disabled="true" required><br>
             <label for="formEventoStatus">Status:</label><br>
-            <input id="formEventoStatus" name="status" type="text" disabled="true"><br>
+            <input id="formEventoStatus" name="status" type="text" disabled="true" required><br>
             <label for="formEventoLocal">Local:</label><br>
-            <input id="formEventoLocal" name="local" type="text" disabled="true"><br>
+            <input id="formEventoLocal" name="local" type="text" disabled="true" required><br>
             <label for="formEventoDataInicio">Data de início:</label><br>
-            <input id="formEventoDataInicio" name="dataInicio" type="datetime-local" disabled="true"><br>
+            <input id="formEventoDataInicio" name="dataInicio" type="datetime-local" disabled="true" required><br>
             <label for="formEventoDataFim">Data de término:</label><br>
-            <input id="formEventoDataFim" name="dataFim" type="datetime-local" disabled="true"><br>
+            <input id="formEventoDataFim" name="dataFim" type="datetime-local" disabled="true" required><br>
             <label for="formEventoCapacidade">Capacidade:</label><br>
-            <input id="formEventoCapacidade" name="capacidade" type="number" disabled="true"><br>
+            <input id="formEventoCapacidade" name="capacidade" type="number" disabled="true" required min="1"><br>
             <label for="formEventoMinimo">Número mínimo de participantes:</label><br>
-            <input id="formEventoMinimo" name="minimo" type="number" disabled="true"><br>
+            <input id="formEventoMinimo" name="minimo" type="number" disabled="true" required min="1"><br>
             <label for="formEventoOrcamento">Orçamento prévio:</label><br>
-            <input id="formEventoOrcamento" name="orcamento" type="number" disabled="true"><br>
+            <input id="formEventoOrcamento" name="orcamento" type="number" disabled="true" required min="0.01" step="0.01"><br>
             <label for="formEventoIngresso">Valor do ingresso:</label><br>
-            <input id="formEventoIngresso" name="ingresso" type="number" disabled="true"><br>
+            <input id="formEventoIngresso" name="ingresso" type="number" disabled="true" required min="0.01" step="0.01"><br>
             <label for="formEventoCronograma">Cronograma:</label><br>
             <textarea id="formEventoCronograma" name="cronograma" cols="100" rows="5" disabled="true"></textarea><br>
-            <label for="formEventoConvenios">Convênios:</label><br>
+            <label for="formEventoNovoNome" style="display:none">Novo nome do evento:</label><br>
+            <input id="formEventoNovoNome" style="display:none" name="novoNome" type="text" disabled="true"><br>
+<!--            <label for="formEventoConvenios">Convênios:</label><br>
             <textarea id="formEventoConvenios" name="convenios" cols="100" rows="5" disabled="true"></textarea><br>
             <label for="formEventoParticipantes">Participantes:</label><br>
             <textarea id="formEventoParticipantes" name="participantes" cols="100" rows="5" disabled="true"></textarea><br>
+-->
         </form>
     </div>
     <div id="cliente" style="display:none">
@@ -67,19 +70,21 @@
             <button class="btnAcao" formmethod="POST" style="display:none"></button>
             <br>
             <label for="formClienteNome">Nome:</label><br>
-            <input id="formClienteNome" name="nome" type="text" disabled="true"><br>
+            <input id="formClienteNome" name="nome" type="text" disabled="true" required><br>
             <label for="formClienteCPF">CPF:</label><br>
-            <input id="formClienteCPF" name="cpf" type="text" disabled="true"><br>
+            <input id="formClienteCPF" name="cpf" type="text" disabled="true" required><br>
             <label for="formClienteEndereco">Endereço:</label><br>
-            <input id="formClienteEndereco" name="endereco" type="text" disabled="true"><br>
+            <input id="formClienteEndereco" name="endereco" type="text" disabled="true" required><br>
             <label for="formClienteEmail">E-mail:</label><br>
-            <input id="formClienteEmail" name="email" type="email" disabled="true"><br>
+            <input id="formClienteEmail" name="email" type="email" disabled="true" required><br>
             <label for="formClienteFone1">Telefone residencial:</label><br>
-            <input id="formClienteFone1" name="telRes" type="tel" disabled="true"><br>
+            <input id="formClienteFone1" name="telRes" type="tel" disabled="true" required><br>
             <label for="formClienteFone2">Telefone Celular:</label><br>
             <input id="formClienteFone2" name="telCel" type="tel" disabled="true"><br>
             <label for="formClienteEventos">Eventos inscritos:</label><br>
             <textarea id="formClienteEventos" name="eventosInscritos" cols="100" rows="5" disabled="true"></textarea><br>
+            <label for="formClienteNovoNome" style="display:none">Novo nome do cliente:</label><br>
+            <input id="formClienteNovoNome" style="display:none" name="novoNome" type="text" disabled="true"><br>
         </form>
     </div>
 
