(html) index / (java) Cliente, ClienteService, ListaClientes, Server
- alteração de int para float em cpf e telefones
- inputs number
- excluirEvento() no Server

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <label for="formClienteEmail">E-mail:</label><br>
             <input id="formClienteEmail" name="email" type="email" disabled="true" required><br>
             <label for="formClienteFone1">Telefone residencial:</label><br>
-            <input id="formClienteFone1" name="telRes" type="tel" disabled="true" required><br>
+            <input id="formClienteFone1" name="telRes" type="number" disabled="true" required><br>
             <label for="formClienteFone2">Telefone Celular:</label><br>
-            <input id="formClienteFone2" name="telCel" type="tel" disabled="true"><br>
+            <input id="formClienteFone2" name="telCel" type="number" disabled="true"><br>
             <label for="formClienteEventos">Eventos inscritos:</label><br>
             <textarea id="formClienteEventos" name="eventosInscritos" cols="100" rows="5" disabled="true"></textarea><br>
             <label for="formClienteNovoNome" style="display:none">Novo nome do cliente:</label><br>
