xmlhttp recupera os dados e vai para nova pagina

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <label for="formEventoDelete">Excluir</label>
                     </div>
                     <div class="col">
-                        <button class="btnAcao btn" formmethod="GET" style="display:none"></button>
+                        <button class="btnAcao btn" style="display:none" type="button"></button>
                     </div>
                 </div><br>
                 <div class="row">
@@ -184,7 +184,7 @@
                         <label for="formClienteDelete">Excluir</label>
                     </div>
                     <div class="col">
-                        <button class="btnAcao btn" formmethod="GET" style="display:none"></button>
+                        <button class="btnAcao btn" style="display:none" type="button"></button>
                     </div>
                 </div><br>
 
