--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="editarEvento(2)">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="editarEvento(3)">Excluir</button>
                     </div>
                 </div><br>
                 <div class="row">
