java, html e js para Evento e Cliente

--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="editarCliente(2)">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="editarCliente(3)">Excluir</button>
                     </div>
                 </div><br>
 
