--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                 <div class="row">
                     <div class="col">
                         <input id="formEventoCreate" type="radio" name="funcao" value="create"
-                            onchange="habilitaFormEvento(this.checked, 'create')">
+                            onchange="habilitaForm(this.checked, 'create', 'Evento')">
                         <label for="formEventoCreate">Cadastrar</label>
                         <input id="formEventoRead" type="radio" name="funcao" value="read"
-                            onchange="habilitaFormEvento(this.checked, 'read')">
+                            onchange="habilitaForm(this.checked, 'read', 'Evento')">
                         <label for="formEventoRead">Consultar</label>
                         <input id="formEventoUpdate" type="radio" name="funcao" value="update"
-                            onchange="habilitaFormEvento(this.checked, 'update')">
+                            onchange="habilitaForm(this.checked, 'update', 'Evento')">
                         <label for="formEventoUpdate">Atualizar</label>
                         <input id="formEventoDelete" type="radio" name="funcao" value="delete"
-                            onchange="habilitaFormEvento(this.checked, 'delete')">
+                            onchange="habilitaForm(this.checked, 'delete', 'Evento')">
                         <label for="formEventoDelete">Excluir</label>
                     </div>
                     <div class="col">
@@ -173,16 +173,16 @@
                 <div class="row">
                     <div class="col">
                         <input id="formClienteCreate" type="radio" name="funcao" value="create"
-                            onchange="habilitaFormCliente(this.checked, 'create')">
+                            onchange="habilitaForm(this.checked, 'create', 'Cliente')">
                         <label for="formClienteCreate">Cadastrar</label>
                         <input id="formClienteRead" type="radio" name="funcao" value="read"
-                            onchange="habilitaFormCliente(this.checked, 'read')">
+                            onchange="habilitaForm(this.checked, 'read', 'Cliente')">
                         <label for="formClienteRead">Consultar</label>
                         <input id="formClienteUpdate" type="radio" name="funcao" value="update"
-                            onchange="habilitaFormCliente(this.checked, 'update')">
+                            onchange="habilitaForm(this.checked, 'update', 'Cliente')">
                         <label for="formClienteUpdate">Atualizar</label>
                         <input id="formClienteDelete" type="radio" name="funcao" value="delete"
-                            onchange="habilitaFormCliente(this.checked, 'delete')">
+                            onchange="habilitaForm(this.checked, 'delete', 'Cliente')">
                         <label for="formClienteDelete">Excluir</label>
                     </div>
                     <div class="col">
