index.html e summit.js
Eliminação de código duplicado para as funções do JS

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="editarEvento(2)">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="editarEvento(3)">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="editaRegistro(2, 'Evento')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="editaRegistro(3, 'Evento')">Excluir</button>
                     </div>
                 </div><br>
                 <div class="row">
@@ -187,8 +187,8 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="editarCliente(2)">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="editarCliente(3)">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="editaRegistro(2, 'Cliente')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="editaRegistro(3, 'Cliente')">Excluir</button>
                     </div>
                 </div><br>
 
