correcoes no DAO update e delete. Corte em algumas etapas do Atualizar e Excluir

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css">
@@ -53,8 +53,8 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="editaRegistro(2, 'Evento')">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="editaRegistro(3, 'Evento')">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="executaXML('update','Evento')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="executaXML('delete','Evento')">Excluir</button>
                     </div>
                 </div><br>
                 <div class="row">
