HTML sem input Atualizar e Excluir. Modal com retorno de lista vazia

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                         <input id="formEventoRead" type="radio" name="funcao" value="read"
                             onchange="habilitaForm(this.checked, 'read', 'Evento')">
                         <label for="formEventoRead">Consultar</label>
-                        <input id="formEventoUpdate" type="radio" name="funcao" value="update"
+                        <!-- <input id="formEventoUpdate" type="radio" name="funcao" value="update"
                             onchange="habilitaForm(this.checked, 'update', 'Evento')">
                         <label for="formEventoUpdate">Atualizar</label>
                         <input id="formEventoDelete" type="radio" name="funcao" value="delete"
                             onchange="habilitaForm(this.checked, 'delete', 'Evento')">
-                        <label for="formEventoDelete">Excluir</label>
+                        <label for="formEventoDelete">Excluir</label> -->
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
@@ -174,12 +174,12 @@
                         <input id="formClienteRead" type="radio" name="funcao" value="read"
                             onchange="habilitaForm(this.checked, 'read', 'Cliente')">
                         <label for="formClienteRead">Consultar</label>
-                        <input id="formClienteUpdate" type="radio" name="funcao" value="update"
+                        <!-- <input id="formClienteUpdate" type="radio" name="funcao" value="update"
                             onchange="habilitaForm(this.checked, 'update', 'Cliente')">
                         <label for="formClienteUpdate">Atualizar</label>
                         <input id="formClienteDelete" type="radio" name="funcao" value="delete"
                             onchange="habilitaForm(this.checked, 'delete', 'Cliente')">
-                        <label for="formClienteDelete">Excluir</label>
+                        <label for="formClienteDelete">Excluir</label> -->
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
