formulario com input select

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Excursão - SUMMIT Ginásio de Escalada</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Custom fonts for this template -->
     <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
@@ -53,8 +54,10 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="executaXML('update','Evento')">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="executaXML('delete','Evento')">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form=""
+                            onclick="executaXML('update','Evento')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form=""
+                            onclick="executaXML('delete','Evento')">Excluir</button>
                     </div>
                 </div><br>
                 <div class="row">
@@ -68,8 +71,15 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoStatus">Status</label><br>
-                            <input id="formEventoStatus" class="form-control" name="status" type="text" disabled="true"
-                                required><br>
+                            <!-- <input id="formEventoStatus" class="form-control" name="status" type="text" disabled="true" required> -->
+                            <select id="formEventoStatus" class="custom-select" name="status" disabled="true">
+                                <option selected></option>
+                                <option value="Aguardando resposta">Aguardando resposta</option>
+                                <option value="Resposta recebida">Resposta recebida</option>
+                                <option value="Evento iniciado">Evento iniciado</option>
+                                <option value="Evento terminado">Evento terminado</option>
+                            </select>
+                            <br>
                         </div>
                     </div>
                     <div class="col">
@@ -183,8 +193,10 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="editaRegistro(2, 'Cliente')">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="editaRegistro(3, 'Cliente')">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form=""
+                            onclick="editaRegistro(2, 'Cliente')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form=""
+                            onclick="editaRegistro(3, 'Cliente')">Excluir</button>
                     </div>
                 </div><br>
 
@@ -278,9 +290,15 @@
     </div>
 
     <!-- Javascript do Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
     <!-- Javascript interno -->
     <script src="javascript/summit.js"></script>
