--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <title>Excursão - SUMMIT Ginásio de Escalada</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
 
     <!-- Custom fonts for this template -->
     <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
-        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.min.css" rel="stylesheet">
@@ -39,11 +38,9 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <input id="formEventoCreate" type="radio" name="funcao" value="create"
-                            onchange="habilitaForm(this.checked, 'create', 'Evento')">
+                        <input id="formEventoCreate" type="radio" name="funcao" value="create" onchange="habilitaForm(this.checked, 'create', 'Evento')">
                         <label for="formEventoCreate">Cadastrar</label>
-                        <input id="formEventoRead" type="radio" name="funcao" value="read"
-                            onchange="habilitaForm(this.checked, 'read', 'Evento')">
+                        <input id="formEventoRead" type="radio" name="funcao" value="read" onchange="habilitaForm(this.checked, 'read', 'Evento')">
                         <label for="formEventoRead">Consultar</label>
                         <!-- <input id="formEventoUpdate" type="radio" name="funcao" value="update"
                             onchange="habilitaForm(this.checked, 'update', 'Evento')">
@@ -54,20 +51,26 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form=""
-                            onclick="executaXML('update','Evento')">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form=""
-                            onclick="executaXML('delete','Evento')">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="executaXML('update','Evento')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="executaXML('delete','Evento')">Excluir</button>
                     </div>
                 </div><br>
                 <div class="row">
-                    <div class="col">
+                    <div class="col colNome">
                         <div class="form-group">
                             <label for="formEventoNome">Nome do evento</label><br>
                             <input id="formEventoNome" class="form-control" name="nome" type="text" disabled="true"
                                 required><br>
                         </div>
                     </div>
+                    <div class="col colNovoNome">
+                        <div class="form-group">
+                            <label for="formEventoNovoNome" style="display:none">Nome do evento:</label><br>
+                            <input id="formEventoNovoNome" style="display:none" class="form-control" name="novoNome"
+                                type="text" disabled="true"><br>
+                        </div>
+                    </div>
+
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoStatus">Status</label><br>
@@ -94,8 +97,8 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoDataInicio">Data de início</label><br>
-                            <input id="formEventoDataInicio" class="form-control" name="dataInicio"
-                                type="datetime-local" disabled="true" required><br>
+                            <input id="formEventoDataInicio" class="form-control" name="dataInicio" type="datetime-local"
+                                disabled="true" required><br>
                         </div>
                     </div>
 
@@ -119,8 +122,8 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoMinimo">Número mínimo de participantes:</label><br>
-                            <input id="formEventoMinimo" class="form-control" name="minimo" type="number"
-                                disabled="true" required min="1"><br>
+                            <input id="formEventoMinimo" class="form-control" name="minimo" type="number" disabled="true"
+                                required min="1"><br>
                         </div>
                     </div>
 
@@ -135,8 +138,8 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoIngresso">Valor do ingresso:</label><br>
-                            <input id="formEventoIngresso" class="form-control" name="ingresso" type="number"
-                                disabled="true" required min="1" step="1"><br>
+                            <input id="formEventoIngresso" class="form-control" name="ingresso" type="number" disabled="true"
+                                required min="1" step="1"><br>
                         </div>
                     </div>
                 </div>
@@ -144,22 +147,12 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoCronograma">Cronograma</label><br>
-                            <textarea id="formEventoCronograma" class="form-control" name="cronograma" cols="100"
-                                rows="5" disabled="true" required>
+                            <textarea id="formEventoCronograma" class="form-control" name="cronograma" cols="100" rows="5"
+                                disabled="true" required>
                             </textarea><br>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="formEventoNovoNome" style="display:none">Novo nome do evento:</label><br>
-                            <input id="formEventoNovoNome" style="display:none" class="form-control" name="novoNome"
-                                type="text" disabled="true" required><br>
-                        </div>
-                    </div>
-                </div>
-
                 <!--<label for="formEventoConvenios">Convênios:</label><br>
                 <textarea id="formEventoConvenios" name="convenios" cols="100" rows="5" disabled="true"></textarea><br>
                             <label for="formEventoParticipantes">Participantes:</label><br>
@@ -178,11 +171,9 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <input id="formClienteCreate" type="radio" name="funcao" value="create"
-                            onchange="habilitaForm(this.checked, 'create', 'Cliente')">
+                        <input id="formClienteCreate" type="radio" name="funcao" value="create" onchange="habilitaForm(this.checked, 'create', 'Cliente')">
                         <label for="formClienteCreate">Cadastrar</label>
-                        <input id="formClienteRead" type="radio" name="funcao" value="read"
-                            onchange="habilitaForm(this.checked, 'read', 'Cliente')">
+                        <input id="formClienteRead" type="radio" name="funcao" value="read" onchange="habilitaForm(this.checked, 'read', 'Cliente')">
                         <label for="formClienteRead">Consultar</label>
                         <!-- <input id="formClienteUpdate" type="radio" name="funcao" value="update"
                             onchange="habilitaForm(this.checked, 'update', 'Cliente')">
@@ -193,25 +184,30 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form=""
-                            onclick="executaXML('update','Cliente')">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form=""
-                            onclick="executaXML('delete','Cliente')">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="executaXML('update','Cliente')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="executaXML('delete','Cliente')">Excluir</button>
                     </div>
                 </div><br>
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col colNome">
                         <div class="form-group">
                             <label for="formClienteNome">Nome</label><br>
                             <input id="formClienteNome" class="form-control" name="nome" type="text" disabled="true"
                                 required><br>
                         </div>
                     </div>
+                    <div class="col colNovoNome">
+                        <div class="form-group">
+                            <label for="formClienteNovoNome" style="display:none">Nome do cliente:</label><br>
+                        <input id="formClienteNovoNome" style="display:none" class="form-control" name="novoNome" type="text"
+                            disabled="true"><br>
+                        </div>
+                    </div>
                     <div class="col">
                         <div class="form-group">
                             <label for="formClienteCPF">CPF</label><br>
-                            <input id="formClienteCPF" class="form-control" name="cpf" type="text" pattern="[0-9]{11}" minlength="11"
+                            <input id="formClienteCPF" class="form-control" name="cpf" type="text" minlength="11"
                                 maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
@@ -220,8 +216,8 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formClienteEndereco">Endereço</label><br>
-                            <input id="formClienteEndereco" class="form-control" name="endereco" type="text"
-                                disabled="true" required><br>
+                            <input id="formClienteEndereco" class="form-control" name="endereco" type="text" disabled="true"
+                                required><br>
                         </div>
                     </div>
                 </div>
@@ -236,14 +232,14 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formClienteFone1">Telefone residencial:</label><br>
-                            <input id="formClienteFone1" class="form-control" name="telRes" type="tel" pattern="[0-9]{10-11}" minlength="10"
+                            <input id="formClienteFone1" class="form-control" name="telRes" type="tel" minlength="10"
                                 maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label for="formClienteFone2">Telefone Celular:</label><br>
-                            <input id="formClienteFone2" class="form-control" name="telCel" type="tel" pattern="[0-9]{10-11}" minlength="10"
+                            <input id="formClienteFone2" class="form-control" name="telCel" type="tel" minlength="10"
                                 maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
@@ -257,22 +253,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="formClienteNovoNome" style="display:none">Novo nome do cliente:</label><br>
-                            <input id="formClienteNovoNome" style="display:none" class="form-control" name="novoNome"
-                                type="text" disabled="true" required><br>
-                        </div>
-                    </div>
-                </div>
             </form>
         </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog"
-        aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -290,14 +277,11 @@
     </div>
 
     <!-- Javascript do Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
     <!-- Javascript interno -->
